--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,35 +3,35 @@
 
     box-sizing: border-box;
 }
-/* #result{
-    width: 25%;
-} */
+
 
 #Section-img  {
-/* margin-right: auto;
-  width: 75%; */
+margin-left: 30%;
+float :right;
+/* padding-left: 30%; */
+padding-bottom: 100px;
+margin-top: -30px;
+/* margin-right: -50px; */
 
-    display: inline-block;
+    /* display: inline-block; */
+    display: block;
 
 
 }
 
 #left-image{
-padding: 20px;
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
 
 }
 #right-image{
-    width: 300px;
-    height: 300px;
-    padding: 20px;
-}
+    width: 200px;
+    height: 200px;
+    }
 #middle-image{
-    width: 300px;
-    height: 300px;
-    padding: 20px;
-
+    width: 200px;
+    height: 200px;
+    
 }
 header {
 padding: 30px;
@@ -41,4 +41,11 @@ padding: 30px;
 
 #viewResult {
     display: none;
+    
+}
+
+#result {
+    width:30%;
+padding: 20px;
+    padding-left: 30px;
 }
